# pdf-buddy

./: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  PRODUCTION_READY.md  datalab.py  docker-compose.yml
backend/: .dockerignore  .env.example  BACKEND_REVIEW.md  Dockerfile  Dockerfile.datalab  README.md  entrypoint.datalab.sh  extraction-schema.json  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 045679aaeb2e_add_exam_metadata_and_enhanced_question_.py  224f0bdede46_initial_schema.py  6a01f4cd3e89_add_unit_field_to_questions.py  8a2b3c4d5e6f_add_datalab_ocr_tables.py  add_file_path_col_add_file_path_to_documents.py
backend/app/: config.py  main.py
backend/app/api/v1/: datalab.py  documents.py  jobs.py  library.py  router.py  search.py  upload.py
backend/app/core/: __init__.py  database.py  prompts.py  qdrant.py
backend/app/models/: __init__.py  datalab.py  document.py  job.py  question.py  review.py
backend/app/schemas/: __init__.py  job.py  question.py
backend/app/services/: __init__.py  datalab_service.py  embedding_service.py  llama_service.py  search_service.py
backend/app/tasks/: celery_app.py  datalab_processor.py  pdf_processor.py
backend/app/utils/: exceptions.py
backend/scripts/: analyze_exam_paper.py  check_stuck_jobs.py  debug_parts.py  direct_llama.py  migrate_pdf_storage.py  test_api.py  test_llama_extract.py  test_production.py  test_real_exam.py  test_refined_parser.py
docs/plans/: 2025-12-16-backend-mvp.md
frontend-react/: README.md  package.json  tailwind.config.js
frontend-react/src/: App.tsx  (+1 more)
(+7 files in other folders)
