[project]
name = "qp-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.9.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "celery>=5.6.0",
    "fastapi>=0.124.4",
    "llama-cloud>=0.1.45",
    "llama-cloud-services>=0.6.88",
    "llama-parse>=0.6.88",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.2",
    "redis>=7.1.0",
    "reportlab>=4.4.6",
    "sentence-transformers>=3.0.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.38.0",
    "zendriver>=0.5.0",
    "torch",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
